# kiro_project

./: .dockerignore  .env.example  .gitignore  .safety-project.ini  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  deploy.sh  docker-compose.yml  main.py  plan.cmd  pyproject.toml  pytest.ini  task-1.cmd  task-2.cmd  task-3.cmd  task-4.cmd  task-5.cmd  task-6.cmd
.github/workflows/: claude-code-review.yml  deploy.yml  docker-build.yml  pr-validation.yml
.kiro/specs/folder-file-processor/: design.md  requirements.md  tasks.md
.kiro/specs/rag-integration/: design.md  requirements.md  tasks.md
docker_deployment/: .dockerignore  .env.example  .env.template  .env.test  DEPLOYMENT_GUIDE.md  Dockerfile  MIGRATION_NOTES.md  README.md  REQUIREMENTS.md  TEST_VALIDATION_REPORT.md  deploy-local.bat  deploy-local.sh  docker-compose.override.yml  docker-compose.yml  fix-permissions.sh  test-env.Dockerfile
docker_deployment/ci/: deploy-from-ghcr.bat  deploy-from-ghcr.sh  docker-compose.yml
docker_deployment/config/: dev_chroma_settings.json  prod_chroma_settings.json
docker_deployment/deploy/: .env.deploy  .env.development  deploy.bat  deploy.sh  docker-compose.yml
docker_deployment/local/: .env.test  build-and-deploy.bat  build-and-deploy.sh  docker-compose.yml
docker_deployment/scripts/: generate_env.py
docker_deployment/shared/: Dockerfile  docker-compose.base.yml
docker_deployment/shared/config/: windows_paths.json
docker_deployment/shared/scripts/: generate_env.py
docker_deployment_from_ghcr/: .env.template  README.md  deploy-ghcr.bat  deploy-ghcr.sh  docker-compose.yml
docker_deployment_from_ghcr/config/: unix_paths.json
docs/: ci-cd-optimization-plan.md
docs/tasks/: task-1-eliminate-duplicate-tests.md  task-2-optimize-pr-docker-builds.md  task-3-parallel-job-execution.md
setup_chromadb/: README.md  chromadb-server.bat  chromadb-server.sh
src/: __init__.py  app.py
src/config/: __init__.py  config_manager.py
src/core/: __init__.py  document_processing.py  file_manager.py  file_monitor.py  file_processor.py  hybrid_file_monitor.py  polling_file_monitor.py  rag_store_processor.py
src/rag_store/: .env_template  README.md  __init__.py  document_processor.py  file_detection.py  mht_processor.py  office_processor.py  pdf_processor.py  rtf_processor.py  store_embeddings.py  word_processor.py
src/rag_store/data_source/: 14-5 Robb v. Capital Acquisitions & Mgmt.DOC  14-5 Robb v. Capital Acquisitions & Mgmt.docx  14-5 Simkus 2014 opinion.DOC  14-5 Simkus 2014 opinion.docx  How to Effectively Volunteer for a Non.mht  README.md  StarWars.doc  The Adventures of Max.docx  Time travel.doc  ~$arWars.doc
src/services/: error_handler.py  logger_service.py
tests/: test_app_document_processing.py  test_app_integration.py  test_app_version.py  test_config_manager.py  test_docker_deployment.py  test_document_processing_config.py  test_document_processing_workflow.py  test_error_handler.py  test_file_manager.py  test_file_monitor.py  test_file_processor.py  test_hybrid_file_monitor.py  test_rag_integration.py  test_rag_store_processor.py
tests/test_config/: test_config_manager.py  test_configuration_validation_error_scenarios.py  test_document_processing_config.py
tests/test_core/: test_document_processing.py  test_document_processing_error_handling.py  test_document_processing_workflow.py  test_file_monitor.py  test_file_processor.py  test_rag_store_processor.py
tests/test_rag_integration_comprehensive/: README.md  __init__.py  base_test_classes.py  run_integration_tests.py  test_comprehensive_integration.py  test_end_to_end_workflow.py  test_performance_stress.py  test_regression.py
tests/test_rag_store/: test_file_detection.py  test_mht_processor.py  test_office_processor.py  test_office_processor_formats.py  test_pdf_processor.py  test_processor_registry_rtf.py  test_rtf_processor.py  test_store_embeddings.py  test_word_processor.py
tests/test_services/: test_error_handler.py  test_logger_service.py
