[project]
name = "kiro-project"
version = "0.1.0"
description = "Folder file processor application"
requires-python = ">=3.12"
dependencies = [
    "watchdog==3.0.0",
    "python-dotenv==1.0.0",
    # RAG store dependencies
    "chromadb>=1.0.17",
    "docx2txt>=0.8",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.2.0",
    "pypdf>=5.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.21.0",
    # Additional dependencies required by dependency validation
    "google-generativeai>=0.3.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "cryptography>=3.1",
    "unstructured[html,rtf]>=0.18.14",
    "langchain-unstructured>=0.1.6",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.2.1",
]
